--- a/user-dashboard-referral.html
+++ b/user-dashboard-referral.html
@@ -94,7 +94,7 @@
                                 <div class="user-dashboard-right-field">
                                     <label for="">Refer to your friends</label>
                                     <input type="text" class="form-control" name="" id="user-dashboard-referral" value="referral">
-                                    <button><i class="fa fa-clone" aria-hidden="true" id="user-dashboard-ref-copy"></i></button>
+                                    <button id="user-dashboard-ref-copy"><i class="fa fa-clone" aria-hidden="true"></i></button>
                                 </div>
                             </div>
 
